# loadtest-api-bench

./: .dockerignore  .env.example  .gitignore  CLAUDE-JP.md  CLAUDE.md  Dockerfile  README.md  api.yaml  deploy.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
devlog/: 2026-03-19.md
docs/: ARCHITECTURE.md
output/: README.md  docker-compose.yaml  openapi.yaml  setup.cfg
output/.openapi-generator/: FILES
output/src/loadtest_api_generated/: main.py  security_api.py
output/src/loadtest_api_generated/apis/: health_api.py  health_api_base.py  users_api.py  users_api_base.py
output/src/loadtest_api_generated/models/: error_response.py  health_response.py  user.py  user_stats.py
output/tests/: conftest.py  test_health_api.py  test_users_api.py
scripts/: seed.py
src/loadtest_api/: config.py  dependencies.py  logging.py  main.py  middleware.py
src/loadtest_api/api/: users.py
src/loadtest_api/models/: user.py
src/loadtest_api/repositories/: async_accessor.py  base.py  bigquery.py  cloud_sql.py  spanner.py  sqlite.py  sync_accessor.py
tests/: conftest.py  test_api_contract.py  test_api_users.py  test_logging.py  test_middleware.py  test_repositories.py  test_seed.py
