[metadata]
name = loadtest_api_generated
version = 0.1.0
description = Load testing API backend for comparing Cloud SQL / Spanner / BigQuery response characteristics
long_description = file: README.md
keywords = OpenAPI Load Test API
python_requires = >= 3.10.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
